Highlighting the current selection is working now.
I am trying to smooth out some rough edges in the user
interface.  The biggest change is to the leftmost selection
table - it should now light up Yellow to show you which
data you are currently viewing.

I am also thinking about splitting the Course types into
sub-types of Coureses, kinda like Teachers/Students are
sub-types of Users.  I think it would help smooth things
out and allow a bit cleaner interface to the model.

--- a/app/views/courses/_course_list.html.erb
+++ b/app/views/courses/_course_list.html.erb
@@ -1,7 +1,3 @@
-<% 
-	# List all the active courses for the current user(Teacher).
-%>
-
 <table id='courses' class='master'>
   <thead>
     <th>Name</th>
@@ -10,7 +6,8 @@
 	<tbody>
 	
 		<% for course in @courses %>
-			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for( :action => :edit, :id => course.id ) %>'"/>
+			<tr class="<%= cycle('odd', 'even') + (current_page?(:id => course) ? ' current' : '') %>" 
+					onclick="location.href='<%= url_for( :action => :edit, :id => course.id ) %>'"/>
 				<%= content_tag :td, course.name %>
 				<%= content_tag :td, course.term.name %>
 			</tr>
@@ -18,10 +15,4 @@
 	
   </tbody>
 </table>
-
-
-			<%# object = value.to_s.camelize.singularize.constantize  %>
-			<%# object_path = url_for object.new %>
-				<%#= content_tag :td, link_to(key, object_path) , :onclick => "location.href='" + url_for(object_path) + "'" %>
-				<%#= button_to( '+', object_path + '/new', :method => :get ) if key != 'ALL'  %>
 
