--- a/app/views/users/_user_types.html.erb
+++ b/app/views/users/_user_types.html.erb
@@ -6,8 +6,6 @@
 		# calling it from every method on every user controller in the land. %>
 <% types = User.find_user_types(:all) %>
 
-<%= debug @courses %>
-
 <table id="types" class="master">
   <thead>
     <th>Type</th>
@@ -17,7 +15,7 @@
 		<% types.sort.each { |key, value| %>
 			<% object = value.to_s.camelize.singularize.constantize  %>
 			<% object_path = url_for object.new %>
-			<tr class="<%= cycle('odd', 'even') %>" />
+			<tr class="<%= cycle('odd', 'even') + (current_page?(:controller => object_path) ? ' current' : '') %>" />
 				<%= content_tag :td, link_to(key, object_path) , :onclick => "location.href='" + url_for(object_path) + "'" %>
 				<td><%= button_to( '+', object_path + '/new', :method => :get ) if key != 'ALL'  %></td>
 			</tr>
