fine tuning the class/homeroom dropdown boxes.

--- a/app/views/courses/_student_list.html.erb
+++ b/app/views/courses/_student_list.html.erb
@@ -1,6 +1,8 @@
+<% params[:value] ||= '||Name'  %>
+
 	<table class='master list' id='students'>
 		<thead>
-			<th>Name</th>
+			<th><%= params[:value].split('||')[1] %></th>
 		</thead>
 		<tbody>
 			<% if @students.blank? %>
