--- a/app/views/courses/_course_list.html.erb
+++ b/app/views/courses/_course_list.html.erb
@@ -8,7 +8,7 @@
 		<% for course in @courses %>
 			<tr class="<%= cycle('odd', 'even') + (current_page?(:id => course) ? ' current' : '') %>" 
 					onclick="location.href='<%= url_for( :action => :edit, :id => course.id ) %>'"/>
-				<%= content_tag :td, course.name %>
+				<%= content_tag :td, link_to( course.name, :action => :edit, :id => course.id ) %>
 				<%= content_tag :td, course.term.name %>
 			</tr>
 		<% end %>
