--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC '-//W3C//DTD XHTML 1.0 Transitional//EN'
+       'http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd'>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Gradesheet<%#= controller.action_name.capitalize + "ing" %></title>
+  <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
+  <title>Gradesheet<%#= controller.action_name.capitalize + 'ing' %></title>
   <%= stylesheet_link_tag 'forms' %>
   <%= stylesheet_link_tag 'layout' %>
   <%= stylesheet_link_tag 'tables' %>
@@ -14,10 +14,10 @@
 <body>
 
 
-<div id="header">
-	<div class="login"><a href="/login">Login</a></div>
-	<div class="tagline">GradeSheet</div>
-	<img src="/images/rails.png">
+<div id='header'>
+	<div class='login'><a href='/login'>Login</a></div>
+	<div class='tagline'>GradeSheet</div>
+	<img src='/images/rails.png' alt='Logo'/>
 
   <%= show_flash %>
 
@@ -25,19 +25,19 @@
 </div>
 
 
-<div id="container">
-  <div id="center" class="column">
+<div id='container'>
+  <div id='center' class='column'>
     <%= yield  %>
   </div>
 
-  <div id="left" class="column">
+  <div id='left' class='column'>
     <%= yield :left  %>
   </div>
   
 </div>
 
-<div id="footer">
-		&copy; 2005 - 2008 <a href="http://www.kangaroobox.com">KangarooBox</a>, LLC.  All rights reserved.
+<div id='footer'>
+		&copy; 2005 - 2008 <a href='http://www.kangaroobox.com'>KangarooBox</a>, LLC.  All rights reserved.
 </div>
 </body>
 </html>
