add/remove is working.  Now I have to simplify it and make it more reliable.

--- a/app/views/courses/_student_list.html.erb
+++ b/app/views/courses/_student_list.html.erb
@@ -6,21 +6,15 @@
 		</thead>
 		<tbody>
 			<% if @students.blank? %>
-				<tr><td></td></tr>
+				<tr><td>Choose a "Homeroom" or a "Class Of Year" above.</td></tr>
 			<% else %>
-				<% for student in @students %>
+				<% students = @students.sort_by &:last_name %>
+				<% for student in students %>
 					<tr class="<%= cycle('odd', 'even') %>"/>
-						<%= content_tag :td, student.full_name %>
-						<td><%= link_to_remote( "+", 
-								:update => "enrolled_students", 
-								:url => { :action => "update"  },
-								:with => "'student=" + student.id.to_s + "'",
-								:method => :put ) %></td>
+						<td><%= link_to_remote student.full_name, :url => add_course_student_path(student) %></td>
 					</tr>
 				<% end %>
 			<% end %>
 		</tbody>
-	</table>
-	
-	
+	</table>	
 
