adding and removing students from courses now works great.

--- a/app/views/courses/_course_list.html.erb
+++ b/app/views/courses/_course_list.html.erb
@@ -1,6 +1,6 @@
 <table id='courses' class='master'>
   <thead>
-    <th>Name</th>
+    <th>Name <%= "(#{@courses.length})" unless @courses.blank? %></th>
     <th>Term</th>
   </thead>
 	<tbody>
