--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -5,10 +5,10 @@
 <head>
   <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
   <title>Gradesheet<%#= controller.action_name.capitalize + 'ing' %></title>
-  <%= stylesheet_link_tag 'forms' %>
   <%= stylesheet_link_tag 'layout' %>
-  <%= stylesheet_link_tag 'tables' %>
   <%= stylesheet_link_tag 'menu' %>
+  <%= stylesheet_link_tag 'forms' %>
+  <%= stylesheet_link_tag 'tables' %>
   <%= javascript_include_tag :defaults %>
 </head>
 <body>
@@ -25,16 +25,21 @@
 </div>
 
 
-<div id='container'>
-  <div id='center' class='column'>
+<div class='colmask leftmenu'>
+<div class='colright'>
+<div class='col1wrap'>
+  <div class='col1'>
     <%= yield  %>
   </div>
+  </div>
 
-  <div id='left' class='column'>
+  <div class='col2'>
     <%= yield :left  %>
   </div>
-  
+
 </div>
+</div>
+
 
 <div id='footer'>
 		&copy; 2005 - 2008 <a href='http://www.kangaroobox.com'>KangarooBox</a>, LLC.  All rights reserved.
