--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 
-<div id='course_details' class='course_list'>
+<div id='details' class='course_list'>
 	CENTER
 	<%#= render :partial => 'edit' %>
 </div>
