Changed over to using buttons when removing students from a course.
Also, I changed the Dashboard page to try out a couple of ideas about puttting countdown clocks in the left column.  It didn't turn out
quite right but it shows some promise.  I think this area could be good for something, I just have to figure it out.  :)

--- a/app/views/courses/_enrolled_students.html.erb
+++ b/app/views/courses/_enrolled_students.html.erb
@@ -3,7 +3,6 @@
 	<table class='master'>
 		<thead>
 			<th>Enrolled Students (<%= students.length %>)</th>
-			<th></th>
 		</thead>
 		<tbody>
 			<% if students.blank? %>
@@ -11,13 +10,16 @@
 			<% else %>
 				<% for student in students %>
 					<tr class="<%= cycle ('odd', 'even') %>" id="<%= student.id %>">
-						<%= content_tag :td, student.full_name %>
-						<td><%= link_to_remote 'X', 
-												:url => { :action => 'remove_student', :student_id => student.id }, 
-												:method => :delete,
-												:loading => "Element.show('spinner')",
-												:complete => "Element.hide('spinner')"
-								 %></td>
+						<td>
+							<% form_remote_tag :url => { :action => 'remove_student', :student_id => student.id },
+										:method => :delete,
+										:confirm => 'Are you sure you want to remove this student from this course?',
+										:loading => "Element.show('spinner')",	
+										:complete => "Element.hide('spinner')" do %>
+								<%= submit_tag 'X' %>
+								&nbsp;&nbsp;<%= h student.full_name %>
+							<% end %>
+						</td>
 					</tr>
 				<% end %>
 			<% end %>
