--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,21 +1,32 @@
 <% content_for :left do %>
-  We'll read from the COMMENTS table to get any 'news' items that might be of interest
-  to the user.  I think the LEFT slab will work well for that.
+<p><script type="text/javascript" src="http://cdn.widgetserver.com/syndication/subscriber/InsertWidget.js"></script><script>if (WIDGETBOX) WIDGETBOX.renderWidget('d415ebdc-7cd4-4d7a-9d40-1722ab7c9b3e');</script></p>
+
+<p><script type="text/javascript" src="http://cdn.widgetserver.com/syndication/subscriber/InsertWidget.js"></script><script>if (WIDGETBOX) WIDGETBOX.renderWidget('1d11ea8b-a3a4-47e6-b389-0c814a50c898');</script></p>
+
+<p><script type="text/javascript" src="http://cdn.widgetserver.com/syndication/subscriber/InsertWidget.js"></script><script>if (WIDGETBOX) WIDGETBOX.renderWidget('0935f110-a1f6-40c4-8643-50eb0535ed23');</script></p>
 <% end %>
 
 <h2>Welcome to the Gradesheet program.</h2>
 
 <p>
-It is out sincere hope that you will find this system useful beyond all compare.
-There are a few things you need to know about the system, so read the bullet
-points and be enlightened.
+This is a pre-Beta version of the GradeSheet software.  All of the data here is
+generated and most of it is non-sensical.  However, it is a starting point and 
+should give you enough 'things' to be able to excercise the program a little bit.
+Please, take a look around and push all the buttons.  You can't hurt anything here.
+If you find something interesting, please <a href='mailto:gradesheet@kangaroobox.com'>let us know about it</a>.</p>
+
+<p>
+Thank you!<br />
+KangarooBox, LLC.
 </p>
 
-<h2>Interesting Tidbits</h2>
+<h2>Latest News</h2>
 <ul>
-  <li>TEST</li>
-  <li>TEST</li>
-  <li>TEST</li>
-  <li>TEST</li>
-
+  <li>The <a href='/courses'>Courses</a> page has been heavily reworked.  Please play
+  	with it a little bit to see how it works.  </li>
+  <li>You are automatically logged in as a teacher named 'Kim Hurt'.  Someday soon you
+	  will be able to log into the system as a Student, Teacher Assistant or another
+	  Teacher.</li>
+  <li>I am trying a couple of new things with the left side column on this page.  How do you
+  	like them?  What would you like to see there?</li>
 </ul>
