Minor look and feel changes made to the Courses edit sheet.

--- a/app/views/courses/_enrolled_students.html.erb
+++ b/app/views/courses/_enrolled_students.html.erb
@@ -1,4 +1,4 @@
-<% students = @course.students.sort_by &:last_name %>
+<% if @course then students = @course.students.sort_by &:last_name end %>
 
 	<table class='master'>
 		<thead>
@@ -6,7 +6,8 @@
 		</thead>
 		<tbody>
 			<% if students.blank? %>
-				<tr><td>No Students</td></tr>
+				<tr><td>No Students.</td></tr>
+				<tr class='help'><td>Add students to this course from the list of students at the right --></td></tr>
 			<% else %>
 				<% for student in students %>
 					<tr class="<%= cycle ('odd', 'even') %>" id="<%= student.id %>">
