--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,8 +4,14 @@
 
 
 <div id='details' class='course_list'>
-	CENTER
-	<%#= render :partial => 'edit' %>
+	<table class='master'>
+		<thead>
+			<th>Enrolled Students</th>
+		</thead>
+		<tbody>
+				<tr class='help'><td><--&nbsp; Choose a course from the list at the left</td></tr>
+		</tbody>
+	</table>
 </div>
 
 
