--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -4,9 +4,41 @@
 
 <%= error_messages_for :course, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
-<div style='float: right; width: 19%;'>
+<div>
+	<% form_for(@course) do |f| %>
+		<%= content_tag( :h1, "#{@course.name}" ) %>
+
+		<label>Name</label>
+		<%= f.text_field :name %>
+
+		<label>Type</label>
+		<%= collection_select :course, :course_type_id, CourseType.find(:all), :id, :name %>
+
+		<label>Teacher</label>
+		<%= collection_select :course, :teacher_id, Teacher.find(:all), :id, :full_name %>
+
+		<label>Term</label>
+		<%= collection_select :course, :term_id, Term.find(:all), :id, :name %>
+
+		<label>Grading Scale</label>
+		<%= collection_select :course, :grading_scale_id, GradingScale.find(:all), :id, :name %>
+
+		<label>Attributes</label>
+		<%= f.text_field :course_att_id %>
+	
+		<%= f.submit "Save" %>
+
+	<% end %>
+</div>
+
+
+<div id='enrolled_students' class='main_form'>
+	<%= render :partial => 'enrolled_students' %>
+</div>
+
+<div class='select_form'>
 	<form id='class_of_form'>
-		<%= select_tag 'class_of', options_for_select(class_range.insert(0, ''), ' '), 
+		<%= select_tag 'class_of', options_for_select(class_range.insert(0, 'Class Of [year]'), ' '), 
 				:onchange => 
 					remote_function(
 						:update => 'student_list', 
@@ -27,42 +59,8 @@
 	<div id='student_list'>	
 		<%= render :partial => 'student_list' %>
 	</div>
-</div>
-
-
-
-<div class='flat' style='float: right; width: 80%;'>
-
-<% form_for(@course) do |f| %>
-	<%= content_tag( :h1, "#{@course.name}" ) %>
-
-	<label>Name</label>
-	<%= f.text_field :name %>
-
-	<label>Type</label>
-	<%= collection_select :course, :course_type_id, CourseType.find(:all), :id, :name %>
-
-	<label>Teacher</label>
-	<%= collection_select :course, :teacher_id, Teacher.find(:all), :id, :full_name %>
-
-	<label>Term</label>
-	<%= collection_select :course, :term_id, Term.find(:all), :id, :name %>
-
-	<label>Grading Scale</label>
-	<%= collection_select :course, :grading_scale_id, GradingScale.find(:all), :id, :name %>
-
-	<label>Attributes</label>
-	<%= f.text_field :course_att_id %>
 	
-	<%= f.submit "Save" %>
-
-<% end %>
-
-<div id='enrolled_students'>
-	<%= render :partial => 'enrolled_students' %>
-</div>
 
 </div>
-
 
 
