Minor look and feel changes made to the Courses edit sheet.

--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -47,7 +47,7 @@
 						:method => :get) %>
 	</form>
 	<form id='homeroom_form'>
-		<%= collection_select :homeroom, :name, @homerooms, :id, :name, {:include_blank => :true,}, {
+		<%= collection_select :homeroom, :name, @homerooms, :id, :name, {:include_blank => 'Home Room'}, {
 				:onchange => 
 					remote_function(
 						:update => 'student_list', 
