--- a/app/views/courses/_student_list.html.erb
+++ b/app/views/courses/_student_list.html.erb
@@ -6,7 +6,7 @@
 		</thead>
 		<tbody>
 			<% if @students.blank? %>
-				<tr class='help'><td>Choose a "Homeroom" or a "Class Of Year" above.</td></tr>
+				<tr class='help'><td>Choose from a <br /><em>'Class Of'</em><br /> or a <br /><em>'Home Room'</em><br /> above.</td></tr>
 			<% else %>
 				<% students = @students.sort_by &:last_name %>
 				<% for student in students %>
