More UI tweaks to the Courses screen.
Working on getting the Home Room drop down to work properly.  Atempting to use named_scopes and while its going
pretty well I'm not sure its the proper overall direction to take.  This is gonna take a little head work...

--- a/app/views/courses/_enrolled_students.html.erb
+++ b/app/views/courses/_enrolled_students.html.erb
@@ -1,4 +1,6 @@
+<%#= debug @course %>
 <% if @course then students = @course.students.sort_by &:last_name end %>
+<% students ||= [] %>
 
 	<table class='master'>
 		<thead>
@@ -6,8 +8,7 @@
 		</thead>
 		<tbody>
 			<% if students.blank? %>
-				<tr><td>No Students.</td></tr>
-				<tr class='help'><td>Add students to this course from the list of students at the right --></td></tr>
+				<tr class='help'><td>Add students to this course from the list of students &nbsp;--></td></tr>
 			<% else %>
 				<% for student in students %>
 					<tr class="<%= cycle ('odd', 'even') %>" id="<%= student.id %>">
