--- a/app/views/users/_user_types.html.erb
+++ b/app/views/users/_user_types.html.erb
@@ -2,7 +2,8 @@
 	# NOTE: I'm 'not sure why using 'object.new' works here, but it does :/  
 %>
 
-<% 	# I know hitting the DB from a view is not proper, but it beats 
+<% 	# FIXME
+		# I know hitting the DB from a view is not proper, but it beats 
 		# calling it from every method on every user controller in the land. %>
 <% types = User.find_user_types(:all) %>
 
