--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -2,15 +2,15 @@
 	<%= render :partial => 'course_list' %>
 <% end %>
 
-<div id="assignments_list">
-	<%= render :partial => "assignment_list" %>
+<div id='details'>
+	<table class='master'>
+		<thead>
+			<th>Assignment Name</th>
+			<th>Possible Points</th>
+			<th>Due Date</th>
+		</thead>
+		<tbody>
+				<tr class='help'><td colspan='3'><--&nbsp; Choose a course from the list at the left</td></tr>
+		</tbody>
+	</table>
 </div>
-
-<div class="buttons">
-	<%= link_to 'New assignment', new_assignment_path, :class=> "positive" %>
-</div>
-
-
-	<%#= link_to 'Show', assignment %>
-	<%#= link_to 'Edit', edit_assignment_path(assignment) %>
-	<%#= link_to 'Destroy', assignment, :confirm => 'Are you sure?', :method => :delete %>
