assignment is working properly now.

--- a/app/views/assignments/_assignment_list.erb
+++ b/app/views/assignments/_assignment_list.erb
@@ -1,19 +1,19 @@
 <table class='master'>
   <thead>
     <tr>
-      <th><%= button_to( '+', new_assignment_path( :course_id => @course.id ), :method => :get ) %></th>
-      <th>Assignment Name</th>
+      <th><%= link_to 'Add Assignment', new_assignment_path( :course_id => @course.id ), :class => 'positive' %>
+      Assignment Name</th>
       <th>Possible points</th>
       <th>Due Date</th>
     </tr>
   </thead>
 	<tbody>
 	<% if @assignments.blank? %>
-		<tr><td colspan='4'>No Assignments Found</td></tr>
+		<tr><td colspan='3'>No Assignments Found</td></tr>
 	<% else %>
 		<% for assignment in @assignments %>
 			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for( :action => :edit, :id => assignment.id ) %>'"/>
-				<%= content_tag :td, assignment.name, :colspan => '2' %>
+				<%= content_tag :td, assignment.name, :colspan => '1' %>
 				<%= content_tag :td, assignment.possible_points %>
 				<%= content_tag :td, assignment.due_date_formated %>
 			</tr>
