--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,3 +1,5 @@
+# FIXME - This functionality moved to :show.  Please remove.
+=begin
 <% content_for :left do %>
 	<%= render :partial => 'course_list' %>
 <% end %>
@@ -62,5 +64,4 @@
 	
 
 </div>
-
-
+=end
