--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :left do %>
-	<%= render :partial => 'course_list' %>
+	<%= render :partial => 'courses/course_list' %>
 <% end %>
 
 <div id='details'>
