minor look and feel improvements.

--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -20,12 +20,12 @@
 			</label>
 		
 			<label><span>Due Date</span>
-				<%= f.date_select :due_date %>
+				<%= f.calendar_date_select :due_date, :time => :false, :month_year => 'label', :buttons => :false %>
 			</label>
 
 			<div class='spacer'>
 				<%= submit_tag 'Save', :class=>"positive" %>
-				<%= link_to 'Cancel', assignment_path(@course.id), :class => "standard" %>
+				<%= link_to 'Cancel', assignment_path(@course.id), :class => 'standard' %>
 			</div>
 	<% end %>
 </div>
