--- a/app/views/courses/_course_list.html.erb
+++ b/app/views/courses/_course_list.html.erb
@@ -1,6 +1,7 @@
 <table id='courses' class='master'>
   <thead>
-    <th>Name <%= "(#{@courses.length})" unless @courses.blank? %></th>
+    <th><%= link_to '+', new_course_path, :class => 'positive mini' %> Name
+    	<%= "(#{@courses.length})" unless @courses.blank? %></th>
     <th>Term</th>
   </thead>
 	<tbody>
