--- a/app/views/assignments/_assignment_list.erb
+++ b/app/views/assignments/_assignment_list.erb
@@ -1,7 +1,7 @@
 <table class='master'>
   <thead>
     <tr>
-      <th><%= link_to 'Add Assignment', new_assignment_path( :course_id => @course.id ), :class => 'positive' %>
+      <th><%= link_to '+', new_assignment_path( :course_id => @course.id ), :class => 'positive mini' %>
       Assignment Name</th>
       <th>Possible points</th>
       <th>Due Date</th>
@@ -13,7 +13,7 @@
 	<% else %>
 		<% for assignment in @assignments %>
 			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for( :action => :edit, :id => assignment.id ) %>'"/>
-				<%= content_tag :td, assignment.name, :colspan => '1' %>
+				<%= content_tag :td, assignment.name %>
 				<%= content_tag :td, assignment.possible_points %>
 				<%= content_tag :td, assignment.due_date_formated %>
 			</tr>
