--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -10,6 +10,7 @@
   <%= stylesheet_link_tag 'forms' %>
   <%= stylesheet_link_tag 'tables' %>
   <%= javascript_include_tag :defaults %>
+  <%= calendar_date_select_includes %>
 </head>
 <body>
 
