--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -23,7 +23,7 @@
 	<tbody>
 		<% for u in users %>
 			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for(u)+'/edit' %>'" />
-				<td><%= button_to "X", u, :method => :delete, :confirm => "Are you sure you want to delete\n\n '" + u.full_name + "'?" %></td>
+				<td><%= button_to "X", u, :method => :delete, :confirm => "Are you sure you want to delete\n\n '" + u.full_name + "'?", :class => 'negative mini' %></td>
 				<%= content_tag :td, u.short_name %>
 				<td><%= link_to u.full_name, url_for(u)+'/edit' %></td>
 				<%= content_tag :td, u.email %>
@@ -35,7 +35,7 @@
 </table>
 
 <span class="paginate">
-<%= will_paginate users %>
+	<%= will_paginate users %>
 </span>
 
 <%= set_focus_to_id 'search' %>
