--- a/app/views/users/_user_types.html.erb
+++ b/app/views/users/_user_types.html.erb
@@ -18,7 +18,7 @@
 			<% object_path = url_for object.new %>
 			<tr class="<%= cycle('odd', 'even') + (current_page?(:controller => object_path) ? ' current' : '') %>" />
 				<%= content_tag :td, link_to(key, object_path) , :onclick => "location.href='" + url_for(object_path) + "'" %>
-				<td><%= button_to( '+', object_path + '/new', :method => :get ) if key != 'ALL'  %></td>
+				<td><%= button_to( '+', object_path + '/new', :method => :get, :class => 'positive mini' ) if key != 'ALL'  %></td>
 			</tr>
 		<% } %>
   </tbody>
